CHANGES-1.3.txt
---------------


CHANGES IN CUPS V1.3.1

	- Fixed the localization instructions and German template for
	  the "Find New Printers" button (STR #2478)
	- The web interface did not work with the Chinese localization
	  (STR #2477)
	- The web interface home page did not work for languages that
	  were only partially localized (STR #2472)
	- Updated the Spanish web interface localization (STR #2473)
	- ppdLocalize() did not work for country-specific localizations.


CHANGES IN CUPS V1.3.0

	- The scheduler did not handle out-of-file conditions
	  gracefully when accepting new connections, leading to
	  heavy CPU usage.
	- The scheduler did not detect ServerBin misconfigurations
	  (STR #2470)
	- "AuthType Default" did not work as expected when the
	  "DefaultAuthType foo" line appeared after it in the
	  cupsd.conf file.
	- The on-line help did not describe many common printing
	  options (STR #1846)
	- The IPP backend did not return the "auth required" status
	  when printing to a Kerberos-protected queue.
	- The scheduler was not looking in the correct directories
	  for LSB PPD files (STR #2464)
	- Changed references to ESP Ghostscript to GPL Ghostscript
	  (STR #2463)
	- The PostScript filter did not cleanly terminate when
	  the job was canceled or stopped.
	- Fixed generation of Kerberos credentials for remote
	  printing.  Note that this requires a recent version of
	  MIT Kerberos with a working krb5_cc_new_unique()
	  function or Heimdal Kerberos.
	- Added Portuguese and updated Italian message catalogs.


CHANGES IN CUPS V1.3rc2

	- Added more range checking to the pdftops filter. 
	- The scheduler would crash if a remote IPP queue was stopped
	  (STR #2460)
	- The scheduler did not allow "DefaultAuthType None".


CHANGES IN CUPS V1.3rc1

	- Updated the German localization (STR #2443)
	- cupsAdminGetServerSettings() did not handle </Foo> properly.
	- When lprm and cancel are run with no job ID, they now will