@@ -4,6 +4,8 @@ CHANGES-1.3.txt
 
 CHANGES IN CUPS V1.3.1
 
+	- The TBCP and BCP port monitors did not handle the trailing
+	  CTRL-D in some PostScript output properly.
 	- Fixed the localization instructions and German template for
 	  the "Find New Printers" button (STR #2478)
 	- The web interface did not work with the Chinese localization
